[package]
name = "ledger47"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
jsondata = { path = "../jsondata" }
uuid = { version = "0.8.1", features = ["v4"] }
