[package]
name = "ledger47"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

[lib]
name = "ledger"

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
structopt = { version = "*", default-features = false }
chrono = "0.4.11"
jsondata = { path = "../jsondata" }
uuid = { version = "0.8.1", features = ["v4"] }
crossterm = "0.16.0"
unicode-width = "0.1.5"
ropey = "1.1.0"
